[package]
name = "zellaunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
nom = { version = "7.1.3", features = ["alloc"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
zellij-tile = "0.37.2"
